--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,27 +1,61 @@
 * {
   box-sizing: border-box;
-  color: #333;
+  border: 1px solid black;
 }
 
-body {
-  background-color: #81a69b;
-  background-image: url(http://static.frontendmasters.com/resources/2019-05-02-complete-intro-react-v5/image-background.png);
+body,
+html {
+  padding: 0;
   margin: 0;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  height: 100vh;
+  width: 100vw;
+}
+body {
+  padding-left: 17.5%;
 }
 
-#list-container {
+.container {
+  width: 65vw;
+  height: 100vh;
+}
+
+.navBar {
+  height: 3rem;
   display: flex;
-  flex-direction: row;
-}
-
-li {
-  list-style: none;
-}
-
-#list-form,
-li {
-  display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
+}
+
+.searchField {
+  height: 2rem;
+}
+
+.profile {
+  height: 15rem;
+  display: flex;
+}
+
+.profile-pic {
+  width: 25%;
+  height: 100%;
+}
+.profile-infos {
+  width: 75%;
+  height: 100%;
+}
+
+.Profile-images {
+  height: 5rem;
+  display: flex;
+  align-items: center;
+}
+
+.Profile-images * {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0.5rem 2rem 0.5rem 2rem;
+  width: 4rem;
+  height: 4rem;
+  border-radius: 50%;
 }
