--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -24,38 +24,56 @@ body {
   display: flex;
   justify-content: space-around;
   align-items: center;
-}
-
-.searchField {
-  height: 2rem;
+  .searchField {
+    height: 2rem;
+  }
 }
 
 .profile {
   height: 15rem;
   display: flex;
-}
-
-.profile-pic {
-  width: 25%;
-  height: 100%;
-}
-.profile-infos {
-  width: 75%;
-  height: 100%;
+  .profile-pic {
+    width: 25%;
+    height: 100%;
+  }
+  .profile-infos {
+    width: 75%;
+    height: 100%;
+  }
 }
 
 .Profile-images {
   height: 5rem;
   display: flex;
   align-items: center;
+  & * {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0.5rem 2rem 0.5rem 2rem;
+    width: 4rem;
+    height: 4rem;
+    border-radius: 50%;
+  }
 }
 
-.Profile-images * {
+.gallery {
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  margin: 0.5rem 2rem 0.5rem 2rem;
-  width: 4rem;
-  height: 4rem;
-  border-radius: 50%;
+  div:first-child {
+    width: 50%;
+    display: flex;
+    justify-content: space-around;
+  }
+  .gallery-photos {
+    & * {
+      margin: 3rem;
+      width: 10rem;
+      background-color: green;
+    }
+  }
+  & * {
+    border: none;
+  }
 }
