--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -7,7 +7,6 @@ body,
 html {
   padding: 0;
   margin: 0;
-  height: 100vh;
   width: 100vw;
 }
 body {
@@ -16,7 +15,6 @@ body {
 
 .container {
   width: 65vw;
-  height: 100vh;
 }
 
 .navBar {
@@ -66,13 +64,17 @@ body {
     display: flex;
     justify-content: space-around;
   }
-  .gallery-photos {
+  div:nth-child(2) {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
     & * {
-      margin: 3rem;
-      width: 10rem;
-      background-color: green;
+      width: 15rem;
+      height: 15rem;
+      margin: 2rem;
     }
   }
+
   & * {
     border: none;
   }
