--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,27 +1,28 @@
 * {
   box-sizing: border-box;
-  border: 1px solid black;
 }
 
 body,
 html {
   padding: 0;
   margin: 0;
-  width: 100vw;
-}
-body {
-  padding-left: 17.5%;
+
+  width: 99vw;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-.container {
-  width: 65vw;
+main {
+  padding: 0 20% 0 20%;
+  background-color: #fafafa;
+  border-top: 1px solid black;
 }
 
 .navBar {
   height: 3rem;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
+  padding: 0 20% 0 20%;
   .searchField {
     height: 2rem;
   }
@@ -33,15 +34,63 @@ body {
   .profile-pic {
     width: 25%;
     height: 100%;
+    & * {
+      width: 70%;
+      height: 70%;
+      margin: 2rem 0 0 3rem;
+      border-radius: 50%;
+    }
   }
   .profile-infos {
     width: 75%;
     height: 100%;
+    padding: 2rem 0 0 2.8rem;
+    div:first-child {
+      display: flex;
+      flex-direction: row;
+      h2 {
+        margin-right: 3rem;
+      }
+      button {
+        color: wheat;
+        background-color: #0095f6;
+        border: none;
+        border-radius: 0.2rem;
+      }
+      & :nth-child(2) {
+        width: 6rem;
+      }
+      & :nth-child(3) {
+        width: 2rem;
+      }
+
+      & :last-child {
+        background-color: transparent;
+        color: #1c1d1d;
+        font-size: 1rem;
+      }
+      & * {
+        margin: 0.2rem;
+      }
+    }
+    div:nth-child(2) {
+      display: flex;
+      flex-direction: row;
+      & * {
+        margin: 2.5rem 2.5rem 0 0.4rem;
+      }
+    }
+    .bio {
+      width: 80%;
+      text-align: justify;
+      letter-spacing: 1px;
+      line-height: 1.2rem;
+    }
   }
 }
 
 .Profile-images {
-  height: 5rem;
+  height: 8rem;
   display: flex;
   align-items: center;
   & * {
@@ -60,9 +109,11 @@ body {
   flex-direction: column;
   align-items: center;
   div:first-child {
-    width: 50%;
+    width: 97%;
+    padding: 0 20% 0 20%;
     display: flex;
     justify-content: space-around;
+    border-top: 2px solid black;
   }
   div:nth-child(2) {
     display: flex;
@@ -70,13 +121,9 @@ body {
     justify-content: space-evenly;
 
     & * {
-      width: 20rem;
+      width: 18.1rem;
       height: 18rem;
       margin: 0.7rem;
     }
-  }
-
-  & * {
-    border: none;
   }
 }
