--- a/src/scss/_gallery.scss
+++ b/src/scss/_gallery.scss
@@ -7,7 +7,7 @@
     padding: 0 20% 0 20%;
     display: flex;
     justify-content: space-around;
-    border-top: 2px solid black;
+    border-top: 2px solid rgb(172, 172, 172);
   }
   div:nth-child(2) {
     display: flex;
